--- a/config.example.toml
+++ b/config.example.toml
@@ -1,29 +1,24 @@
-[marketplace]
-enabled = false # Turn on or off the marketplace entirely
-psk = "CHANGEME" # Change this to something more secure.
-level = 1
-
 [seo]
-enabled = false
+enabled = true
 domain = "https://nebulaproxy.io"
 
 [db]
-name = "database" # Your database name
-username = "username" # The username of your DB (SQLITE just ignores this)
-password = "password" # The password to your DB (SQLITE ignores this)
-postgres = false # Enable to use postgres over sqlite (recommended for large prod instances)
+name = "nebula_prod_db"
+username = "nebula_admin"
+password = "StrongSecureP@ssw0rd!" # Change this to your actual secure password
+postgres = true
 
-[postgres] # Set the "domain" to either and ip address or a actual domain 
-domain = ""
+[postgres]
+domain = "127.0.0.1" # or your actual PostgreSQL server IP/domain
 port = 5432
 
 [server.server]
 port = 8080
 wisp = true
-logging = true # Disable for the tons & tons of logs to go away (useful for debugging but otherwise eh)
+logging = true
 
 [masqr]
-enabled = false
-failed = "failed.html" # Default masqr failed page. For per-site failed pages, create a folder named "Masqrd" and create DOMAIN.TLD.html
-whitelisted = ["https://nebulaservices.org"] # List of domains to skip masqr
-url = "" # Masqr license URL
+enabled = true
+failed = "failed.html"
+whitelisted = ["https://services.org"]
+url = "https://license.nebulaservices.org/validate
